# rust_native

./: .gitignore  AGENTS.md  Cargo.toml  MF_framework_plan.md  README.md
.github/workflows/: ci.yml  ios-smoke.yml  nightly-perf.yml
crates/backend_api/: Cargo.toml
crates/backend_api/src/: lib.rs
crates/backend_native/: Cargo.toml
crates/backend_native/src/: executor.rs  fallback.rs  ios.rs  lib.rs
crates/backend_wgpu/: Cargo.toml
crates/backend_wgpu/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: diff.rs  dsl.rs  layout.rs  lib.rs  signal.rs  view.rs
crates/dev_cli/: Cargo.toml
crates/dev_cli/src/: main.rs
crates/dev_protocol/: Cargo.toml
crates/dev_protocol/src/: lib.rs
crates/dev_support/: Cargo.toml
crates/dev_support/src/: ffi_renderer.rs  lib.rs  remote_backend.rs  worker_loop.rs
crates/ios_examples_bridge/: Cargo.toml
crates/ios_examples_bridge/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  parser.rs
crates/native_schema/: Cargo.toml
crates/native_schema/src/: events.rs  layout.rs  lib.rs  mutation.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: app.rs  cleanup.rs  interval.rs  lib.rs  tests.rs
crates/vdom_runtime/: Cargo.toml
crates/vdom_runtime/src/: layout.rs  lib.rs  mutations.rs  runtime.rs  tree.rs  types.rs
crates/vdom_runtime/tests/: golden_snapshots.rs  perf_harness.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: builders.rs  button.rs  color.rs  container.rs  font.rs  image.rs  input.rs  layout.rs  lib.rs  list.rs  safe_area.rs  text.rs
docs/: architecture_vdom.md  execution_backlog_ru.md  framework_deep_dive_ru.md  layout_contract.md  mutation_protocol.md  remediation_plan.md  roadmap_vdom_native.md  smuzy_framework_update_plan_ru.md  smuzy_gap_analysis_ru.md  testing_strategy.md
examples/album_list/: Cargo.toml
examples/album_list/src/: ios_bridge.rs  lib.rs  main.rs
examples/counter/: Cargo.toml
examples/counter/ios/App/: project.yml
examples/counter/ios/App/App/: AppDelegate.swift  ExamplesBridge.h
examples/counter/ios/App/App.xcodeproj/: project.pbxproj
examples/counter/ios/App/App.xcodeproj/xcshareddata/xcschemes/: App.xcscheme
examples/counter/src/: ios_bridge.rs  lib.rs  main.rs
examples/form_demo/: Cargo.toml
examples/form_demo/ios/App/: project.yml
examples/form_demo/ios/App/App/: AppDelegate.swift  LaunchScreen.storyboard
examples/form_demo/ios/App/App.xcodeproj/: project.pbxproj
examples/form_demo/src/: ios_bridge.rs  lib.rs  main.rs
ios/: info.plist
ios/ExamplesHost/: project.yml
ios/ExamplesHost/ExamplesHost/: AppDelegate.swift  ExamplesBridge.h  (+1 more)
ios/ExamplesHost/ExamplesHost.xcodeproj/: project.pbxproj
logs/: .034b357ab828d67d8864fc58027c8dfb71ee3826-audit.json
(+23 files in other folders)
