[package]
name = "ios_examples_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
backend_native = { workspace = true }
mf_runtime = { workspace = true }
native_schema = { workspace = true }
counter = { path = "../../examples/counter" }
album_list = { path = "../../examples/album_list" }
