[package]
name = "form_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
backend_native = { workspace = true }
mf_core = { workspace = true }
mf_macros = { workspace = true }
mf_runtime = { workspace = true }
mf_widgets = { workspace = true }
native_schema = { workspace = true }
